# ayy

./: .gitignore  404.html  README.md  app.py  db_exp.ipynb  db_exp.py  dialog.json  exp.ipynb  exp.py  index.html  kwargs.json  lgm.json  messages.json  mkdocs.yml  ping_dialogs.py  ping_prompts.py  ping_up.py  pyproject.toml  run.py  sitemap.xml  stats_start.json  stats_system.txt  test.json  test.md  tools_exp.py  vk.ipynb
.github/workflows/: ci.yml
docs/: index.md
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
src/ayy/: agent.py  agents.py  crawling.py  db_models.py  db_models2.py  dialog.py  dialogs.py  exp.py  func_utils.py  leggo.py  leggo1.py  leggo2.py  memory.py  plan.json  plan1.json  prompts.py  redis_utils.py  selected_tools.json  selector_task.txt  task.py  tool_exp.py  tools.py  tools2.py  torm.py
stats_prompts/: stats_prompt1.txt  stats_prompt2.txt  stats_prompt3.txt
