[project]
name = "ayy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Hamza Farhan", email = "thehamza96@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["instructor>=1.6.3", "loguru>=0.7.2", "pydantic>=2.9.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"